weird chrome specific hidden overflow; fixes #786

--- a/app/assets/stylesheets/partials/_dot-tv-welcome.scss
+++ b/app/assets/stylesheets/partials/_dot-tv-welcome.scss
@@ -80,6 +80,6 @@
   padding: 6px 5px 3px 6px;
 
   .welcome-message__button {
-    margin: 0 0 1px;//fixes overflow:hidden; ugliness
+    margin: 1px;//fixes overflow:hidden; ugliness
   }
 }
